New design of ConnectionStatus and buttons in it.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -938,7 +938,7 @@
   "signature-correct": "Signature is correct",
   "signature-incorrect": "Signature is incorrect",
   "signature-verification-in-progress": "Signature verification in progress",
-  "sign-up": "Create a Blog",
+  "sign-up": "Sign Up",
   "size": "Size",
   "sorry-you-banned": "Sorry, you cannot perform this operation, because the author has banned you.",
   "source-format": {
