--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -938,7 +938,7 @@
   "signature-correct": "Podpis jest poprawny",
   "signature-incorrect": "Podpis jest niepoprawny",
   "signature-verification-in-progress": "Trwa weryfikacja podpisu",
-  "sign-up": "Utwórz blog",
+  "sign-up": "Zarejestruj się",
   "size": "Rozmiar",
   "sorry-you-banned": "Niestety nie możesz wykonać tej operacji, ponieważ autor Cię zbanował.",
   "source-format": {
