--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -938,7 +938,7 @@
   "signature-correct": "Подпись верна",
   "signature-incorrect": "Подпись неверна",
   "signature-verification-in-progress": "Идёт проверка подписи",
-  "sign-up": "Создать блог",
+  "sign-up": "Регистрация",
   "size": "Размер",
   "sorry-you-banned": "К сожалению, вы не можете выполнить эту операцию, так как автор забанил вас.",
   "source-format": {
