--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -938,7 +938,7 @@
   "signature-correct": "Підпис вірний",
   "signature-incorrect": "Підпис невірний",
   "signature-verification-in-progress": "Йде перевірка підпису",
-  "sign-up": "Створити блог",
+  "sign-up": "Зареєструватися",
   "size": "Розмір",
   "sorry-you-banned": "На жаль, ви не можете здійснити цю операцію, оскільки автор забанив вас.",
   "source-format": {
