Moved last items from VerticalMenu to SandwichMenu.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -467,7 +467,6 @@
   "node-settings-changed-conflict": "Blog settings were changed by somebody.",
   "no-kick": "Do not kick",
   "no-name-known": "no name known",
-  "no-name-set": "no name set",
   "no-notifications": "No notifications",
   "no-posts-yet": "No posts yet",
   "no-requests-available": "No requests available.",
@@ -969,6 +968,7 @@
   "summary": "Summary",
   "superscript": "Superscript",
   "support": "Support",
+  "switch-accounts": "Switch accounts",
   "terms-and-conditions": "Terms and Conditions",
   "text": "Text",
   "text-contains-formatting": "The text contains formatting. Do you want to copy the text with formatting tags?",
