--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -467,7 +467,6 @@
   "node-settings-changed-conflict": "Ustawienia bloga zostały zmienione przez kogoś innego.",
   "no-kick": "Nie wyrzucaj",
   "no-name-known": "nieznana nazwa",
-  "no-name-set": "nie ustawiono nazwy",
   "no-notifications": "Brak powiadomień",
   "no-posts-yet": "Jeszcze brak postów",
   "no-requests-available": "Brak dostępnych żądań.",
@@ -969,6 +968,7 @@
   "summary": "Podsumowanie",
   "superscript": "Indeks górny",
   "support": "Wsparcie",
+  "switch-accounts": "Przełącz konta",
   "terms-and-conditions": "Warunki i zasady",
   "text": "Tekst",
   "text-contains-formatting": "Tekst zawiera formatowanie. Czy chcesz skopiować tekst wraz z tagami formatującymi?",
