--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -467,7 +467,6 @@
   "node-settings-changed-conflict": "Настройки блога были кем-то изменены.",
   "no-kick": "Не выгонять",
   "no-name-known": "неизвестное имя",
-  "no-name-set": "имя не задано",
   "no-notifications": "Нет уведомлений",
   "no-posts-yet": "Постов пока нет",
   "no-requests-available": "Нет доступных просьб.",
@@ -969,6 +968,7 @@
   "summary": "Коротко",
   "superscript": "Надстрочный знак",
   "support": "Одобряю",
+  "switch-accounts": "Сменить аккаунт",
   "terms-and-conditions": "Правилами использования",
   "text": "Текст",
   "text-contains-formatting": "Текст содержит форматирование. Вы хотите скопировать текст с тегами форматирования?",
