--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -467,7 +467,6 @@
   "node-settings-changed-conflict": "Налаштування блога були кимось змінені.",
   "no-kick": "Не виганяти",
   "no-name-known": "невідоме ім'я",
-  "no-name-set": "ім'я не задано",
   "no-notifications": "Немає повідомлень",
   "no-posts-yet": "Постів ще немає",
   "no-requests-available": "Немає доступних прохань.",
@@ -969,6 +968,7 @@
   "summary": "Коротко",
   "superscript": "Надрядковий знак",
   "support": "Схвалюю",
+  "switch-accounts": "Перемкнути акаунт",
   "terms-and-conditions": "Правилами користування",
   "text": "Текст",
   "text-contains-formatting": "Текст містить форматування. Ви бажаєте скопіювати текст із тегами форматування?",
