Limited features for non-signed users and invitation to create an account.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -3,7 +3,7 @@
   "access-granted": "Access granted",
   "access-request-not-valid": "Access request is not valid",
   "add-avatar": "Add avatar",
-  "add-comments-need": "To add comments, you need to <0>{signup}</0> or <1>{connect}</1>",
+  "add-comment": "Add comment",
   "add-connection": "Add account",
   "add-donation": "Add Donation",
   "add-donation-button": "Add donation",
@@ -405,6 +405,7 @@
   "last-three-months": "In the last 3 months",
   "last-used": "Last used:",
   "less": "Less",
+  "lets-try-all-features": "Let's try all Moera features — <0>Create an Account</0>",
   "link": "Link",
   "link-copied": "Link copied to the clipboard",
   "links": "Links",
@@ -474,7 +475,6 @@
   "not-accept-sheriff-governance": "Do not accept sheriff's governance",
   "not-accessible": "Not accessible",
   "not-allowed": "Not allowed",
-  "not-connected-home": "Not logged in",
   "note-complaints-public": "<b>Note:</b> All complaints to the sheriff are public. You can ask not to publish your complaint for some reason, but the final decision is made by the sheriff.",
   "no-text": "(no text)",
   "not-following-comments": "Not following comments",
@@ -1015,6 +1015,7 @@
   "transfer-existing-name": "Transfer an existing name",
   "transfer-node-name": "Transfer Name From Another Node",
   "try-again": "Try again",
+  "try-all-features": "Try all Moera features — <0>Create an Account</0>",
   "try-refine-search": "Try to refine your search terms or adjust filters",
   "tune-recommendations": "Tune recommendations",
   "turn-off": "Turn off",
