--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -3,7 +3,7 @@
   "access-granted": "Dostęp przyznany",
   "access-request-not-valid": "Żądanie dostępu jest nieprawidłowe",
   "add-avatar": "Dodaj awatar",
-  "add-comments-need": "Aby dodać komentarze, musisz się <0>{signup}</0> lub <1>{connect}</1>",
+  "add-comment": "Dodaj komentarz",
   "add-connection": "Dodaj konto",
   "add-donation": "Dodaj darowiznę",
   "add-donation-button": "Dodaj darowiznę",
@@ -405,6 +405,7 @@
   "last-three-months": "W ciągu ostatnich 3 miesięcy",
   "last-used": "Ostatnio używane:",
   "less": "Mniej",
+  "lets-try-all-features": "Wypróbujmy wszystkie funkcje Moera — <0>Utwórz konto</0>",
   "link": "Link",
   "link-copied": "Link skopiowany do schowka",
   "links": "Linki",
@@ -474,7 +475,6 @@
   "not-accept-sheriff-governance": "Nie akceptuj rządów szeryfa",
   "not-accessible": "Niedostępny",
   "not-allowed": "Nie dozwolone",
-  "not-connected-home": "Nie zalogowano",
   "note-complaints-public": "<b>Uwaga:</b> wszystkie skargi kierowane do szeryfa są publiczne. Możesz poprosić o niepublikowanie Twojej skargi z jakiegokolwiek powodu, ale ostateczna decyzja należy do szeryfa.",
   "no-text": "(brak tekstu)",
   "not-following-comments": "Nie śledzi komentarzy",
@@ -1015,6 +1015,7 @@
   "transfer-existing-name": "Przenieś istniejącą nazwę",
   "transfer-node-name": "Przenieś nazwę z innego węzła",
   "try-again": "Spróbuj ponownie",
+  "try-all-features": "Wypróbuj wszystkie funkcje — <0>Utwórz konto</0>",
   "try-refine-search": "Spróbuj zawęzić wyszukiwane hasła lub dostosować filtry",
   "tune-recommendations": "Dostosuj rekomendacje",
   "turn-off": "Wyłącz",
