--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -3,7 +3,7 @@
   "access-granted": "Доступ разрешён",
   "access-request-not-valid": "Запрос на доступ недействителен",
   "add-avatar": "Добавить аватар",
-  "add-comments-need": "Чтобы комментировать, вам нужно <0>{signup}</0> или <1>{connect}</1>",
+  "add-comment": "Добавить комментарий",
   "add-connection": "Добавить аккаунт",
   "add-donation": "Добавить донат",
   "add-donation-button": "Добавить донат",
@@ -405,6 +405,7 @@
   "last-three-months": "В последние 3 месяца",
   "last-used": "Последнее использование:",
   "less": "Меньше",
+  "lets-try-all-features": "Откройте все возможности Moera — <0>Создайте аккаунт</0>",
   "link": "Ссылка",
   "link-copied": "Ссылка скопирована в буфер обмена",
   "links": "Ссылки",
@@ -474,7 +475,6 @@
   "not-accept-sheriff-governance": "Не одобрил присмотр шерифа",
   "not-accessible": "Недоступно",
   "not-allowed": "Недопустимо",
-  "not-connected-home": "Не вошли",
   "note-complaints-public": "<b>Примечание:</b> Все жалобы шерифу являются общедоступными. Вы можете попросить не публиковать вашу жалобу по какой-либо причине, но окончательное решение принимает шериф.",
   "no-text": "(без текста)",
   "not-following-comments": "Не слежу за комментариями",
@@ -1015,6 +1015,7 @@
   "transfer-existing-name": "Переместить существующее имя",
   "transfer-node-name": "Переместить имя с другого узла",
   "try-again": "Попробуй еще раз",
+  "try-all-features": "Откройте все возможности — <0>Создайте аккаунт</0>",
   "try-refine-search": "Попробуйте уточнить поисковый запрос или настроить фильтры",
   "tune-recommendations": "Настроить рекомендации",
   "turn-off": "Выключить",
