--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -3,7 +3,7 @@
   "access-granted": "Доступ надано",
   "access-request-not-valid": "Запит на доступ недійсний",
   "add-avatar": "Додати аватар",
-  "add-comments-need": "Щоб коментувати, вам треба <0>{signup}</0> або <1>{connect}</1>",
+  "add-comment": "Додати коментар",
   "add-connection": "Додати акаунт",
   "add-donation": "Додати донат",
   "add-donation-button": "Додати донат",
@@ -405,6 +405,7 @@
   "last-three-months": "У останні 3 місяці",
   "last-used": "Останнє використання:",
   "less": "Менше",
+  "lets-try-all-features": "Спробуйте всі можливості Moera — <0>Створіть акаунт</0>",
   "link": "Посилання",
   "link-copied": "Посилання скопійоване до буфера обміну",
   "links": "Посилання",
@@ -474,7 +475,6 @@
   "not-accept-sheriff-governance": "Не схвалив нагляд шерифа",
   "not-accessible": "Недоступно",
   "not-allowed": "Неприпустимо",
-  "not-connected-home": "Не увійшли",
   "note-complaints-public": "<b>Примітка:</b> Усі скарги шерифові є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
   "no-text": "(без текста)",
   "not-following-comments": "Не слідкую за коментарями",
@@ -1015,6 +1015,7 @@
   "transfer-existing-name": "Перемістити існуюче ім'я",
   "transfer-node-name": "Перемістити ім'я з іншого вузла",
   "try-again": "Спробуй ще раз",
+  "try-all-features": "Спробуйте всі можливості — <0>Створіть акаунт</0>",
   "try-refine-search": "Спробуйте уточнити пошуковий запит або налаштувати фільтри",
   "tune-recommendations": "Налаштувати рекомендації",
   "turn-off": "Вимкнути",
