--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -38,7 +38,10 @@
   "avatar": "Аватарка",
   "avatar-placeholder": "Место для аватарки",
   "avatar-set": "Аватарка установлена",
-  "avatar-shape": "Форма аватарки",
+  "avatar-shape": {
+    "circle": "Круглая аватарка",
+    "square": "Квадратная аватарка"
+  },
   "avatar-too-small": "Размер картинки для аватарки должен быть хотя бы 100x100 пикселов",
   "back-complaints": "Назад к списку жалоб",
   "back-news": "Назад к Новостям",
