--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -38,7 +38,10 @@
   "avatar": "Аватар",
   "avatar-placeholder": "Місце для аватара",
   "avatar-set": "Аватар встановлено",
-  "avatar-shape": "Форма аватара",
+  "avatar-shape": {
+    "circle": "Круглий аватар",
+    "square": "Квадратний аватар"
+  },
   "avatar-too-small": "Розмір картинки для аватара повинен бути хоча б 100x100 пікселів",
   "back-complaints": "Назад до списку скарг",
   "back-news": "Назад до Новин",
