More descriptive messages and titles on the Explore page to better understand its purpose.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -474,6 +474,7 @@
   "no-name-known": "no name known",
   "no-notifications": "No notifications",
   "no-posts-yet": "No posts yet",
+  "no-recommendations": "No recommendations yet",
   "no-requests-available": "No requests available.",
   "normal": "Normal",
   "not-accept-sheriff-governance": "Do not accept sheriff's governance",
@@ -483,6 +484,7 @@
   "no-text": "(no text)",
   "not-following-comments": "Not following comments",
   "nothing-found": "Nothing found",
+  "nothing-to-recommend": "For now, we have nothing to recommend",
   "notify-about-update": "Notify followers about the update",
   "notify-followers": "Notify followers",
   "not-matter": "Does not matter",
@@ -1014,6 +1016,7 @@
   "token-usage-warning": "Please note that the token gives admin access to your blog. Never give it to anybody you don't trust!",
   "too-long": "Too long",
   "top": "Top",
+  "top-50": "Top 50",
   "total": "Total",
   "total-colon": "Total:",
   "transfer": "Transfer",
