--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -474,6 +474,7 @@
   "no-name-known": "nieznana nazwa",
   "no-notifications": "Brak powiadomień",
   "no-posts-yet": "Jeszcze brak postów",
+  "no-recommendations": "Brak rekomendacji",
   "no-requests-available": "Brak dostępnych żądań.",
   "normal": "Normalny",
   "not-accept-sheriff-governance": "Nie akceptuj rządów szeryfa",
@@ -483,6 +484,7 @@
   "no-text": "(brak tekstu)",
   "not-following-comments": "Nie śledzi komentarzy",
   "nothing-found": "Nic nie znaleziono",
+  "nothing-to-recommend": "Na razie nie mamy nic do polecenia",
   "notify-about-update": "Powiadom obserwujących o aktualizacji",
   "notify-followers": "Powiadom obserwujących",
   "not-matter": "Nie ma znaczenia",
@@ -1014,6 +1016,7 @@
   "token-usage-warning": "Prosimy pamiętać, że token daje dostęp do bloga. Nigdy nie udostępniaj go osobom, którym nie ufasz!",
   "too-long": "Zbyt długi",
   "top": "Góra",
+  "top-50": "Top 50",
   "total": "Całkowity",
   "total-colon": "Całkowite",
   "transfer": "Przenieś",
