--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -474,6 +474,7 @@
   "no-name-known": "неизвестное имя",
   "no-notifications": "Нет уведомлений",
   "no-posts-yet": "Постов пока нет",
+  "no-recommendations": "Рекомендаций пока нет",
   "no-requests-available": "Нет доступных просьб.",
   "normal": "Обычный",
   "not-accept-sheriff-governance": "Не одобрил присмотр шерифа",
@@ -483,6 +484,7 @@
   "no-text": "(без текста)",
   "not-following-comments": "Не слежу за комментариями",
   "nothing-found": "Ничего не найдено",
+  "nothing-to-recommend": "Пока нам нечего порекомендовать",
   "notify-about-update": "Уведомить подписчиков об обновлении",
   "notify-followers": "Уведомить подписчиков",
   "not-matter": "Не имеет значения",
@@ -1014,6 +1016,7 @@
   "token-usage-warning": "Имейте в виду, что токен даёт доступ к вашему блогу с правами администратора. Никогда не передавайте его тому, кому вы не доверяете!",
   "too-long": "Слишком длинно",
   "top": "В конец",
+  "top-50": "Топ 50",
   "total": "Всего",
   "total-colon": "Всего:",
   "transfer": "Переместить",
