--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -474,6 +474,7 @@
   "no-name-known": "невідоме ім'я",
   "no-notifications": "Немає повідомлень",
   "no-posts-yet": "Постів ще немає",
+  "no-recommendations": "Рекомендацій поки що немає",
   "no-requests-available": "Немає доступних прохань.",
   "normal": "Звичайний",
   "not-accept-sheriff-governance": "Не схвалив нагляд шерифа",
@@ -483,6 +484,7 @@
   "no-text": "(без текста)",
   "not-following-comments": "Не слідкую за коментарями",
   "nothing-found": "Нічого не знайдено",
+  "nothing-to-recommend": "Наразі ми не можемо нічого порекомендувати",
   "notify-about-update": "Повідомити підписникам про оновлення",
   "notify-followers": "Повідомити підписникам",
   "not-matter": "Не має значення",
@@ -1014,6 +1016,7 @@
   "token-usage-warning": "Майте на увазі, що токен дає доступ до вашого блогу з правами адміністратора. Ніколи не передавайте його тому, кому ви не довіряєте!",
   "too-long": "Занадто довго",
   "top": "У кінець",
+  "top-50": "Топ 50",
   "total": "Усього",
   "total-colon": "Всього:",
   "transfer": "Перемістити",
