Forgotten translation for "recommendations".

--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -606,6 +606,7 @@
   "read-more": "Czytaj więcej...",
   "reason": "Powód",
   "received-mail": "Otrzymano już maila",
+  "recommendations": "Rekomendacje",
   "recommendation-settings-updated": "Ustawienia rekomendacji zaktualizowane",
   "recommended-post": "Rekomendacja",
   "recommend-set-email": "<0>Zalecamy podanie adresu e-mail.</0> Może się przydać, na przykład, do odzyskania hasła. Nie martw się, nikt inny go nie zobaczy.",
