--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -606,6 +606,7 @@
   "read-more": "Читать дальше...",
   "reason": "Причина",
   "received-mail": "Уже получил письмо",
+  "recommendations": "Рекомендации",
   "recommendation-settings-updated": "Настройки рекомендаций обновлены",
   "recommended-post": "Рекомендация",
   "recommend-set-email": "<0>Рекомендуем указать адрес электронной почты.</0> Он может пригодиться, например, для восстановления пароля. Не беспокойтесь, никто посторонний его не увидит.",
