--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -606,6 +606,7 @@
   "read-more": "Read more...",
   "reason": "Reason",
   "received-mail": "Received the mail already",
+  "recommendations": "Recommendations",
   "recommendation-settings-updated": "Recommendation settings updated",
   "recommended-post": "Recommended",
   "recommend-set-email": "<0>We recommend providing an email address.</0> It may come in handy, for example, for password recovery. Don't worry, no one else will see it.",
