--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -606,6 +606,7 @@
   "read-more": "Читати далі...",
   "reason": "Причина",
   "received-mail": "Вже отримав листа",
+  "recommendations": "Рекомендації",
   "recommendation-settings-updated": "Налаштування рекомендацій оновлено",
   "recommended-post": "Рекомендація",
   "recommend-set-email": "<0>Рекомендуємо вказати адресу електронної пошти.</0> Вона може знадобитися, наприклад, для відновлення пароля. Не хвилюйтеся, ніхто сторонній її не побачить.",
