Introducing global pages and special title style for them.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -43,6 +43,7 @@
     "square": "Square avatar"
   },
   "avatar-too-small": "Avatar image size should be at least 100x100 pixels.",
+  "back": "Back",
   "back-complaints": "Back to the list of complaints",
   "back-news": "Back to News",
   "back-post": "Back to Post",
