--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -43,6 +43,7 @@
     "square": "Kwadratowy awatar"
   },
   "avatar-too-small": "Rozmiar obrazka awatara powinien wynosić co najmniej 100x100 pikseli.",
+  "back": "Cofnij",
   "back-complaints": "Powrót do listy skarg",
   "back-news": "Powrót do Aktualności",
   "back-post": "Powrót do postu",
