--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -43,6 +43,7 @@
     "square": "Квадратная аватарка"
   },
   "avatar-too-small": "Размер картинки для аватарки должен быть хотя бы 100x100 пикселов",
+  "back": "Назад",
   "back-complaints": "Назад к списку жалоб",
   "back-news": "Назад к Новостям",
   "back-post": "Назад к посту",
