--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -43,6 +43,7 @@
     "square": "Квадратний аватар"
   },
   "avatar-too-small": "Розмір картинки для аватара повинен бути хоча б 100x100 пікселів",
+  "back": "Назад",
   "back-complaints": "Назад до списку скарг",
   "back-news": "Назад до Новин",
   "back-post": "Назад до поста",
