Basic design of the login page.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -63,6 +63,7 @@
     "itself": "The blog itself"
   },
   "blog-moved": "It seems that blog <b>{name}</b> has moved to the new address <b>{location}</b>. Do you want to open the blog at the new location?",
+  "blog-name": "Blog name",
   "bold": "Bold",
   "bottom": "Bottom",
   "bulleted-list": "Bulleted list",
@@ -199,6 +200,7 @@
   "donations-android-prohibited": "Donations feature is prohibited in Android apps downloaded from Google Play according to <0>Google Play Payments Policy</0>.<1/><2/>Please use Moera web client for this.",
   "dont-ask-again": "Don't ask again",
   "dont-ask-next-time": "Don't ask next time",
+  "dont-have-account": "Don't have an account?",
   "dont-recommend": "Do not recommend",
   "dont-recommend-user": "Do not recommend posts by <b>{name}</b> anymore?",
   "do-want-allow-android-google-play": "<0>Do you want your blog to be accessible with Moera for Android app installed from Google Play?</0> To do this, you must allow the sheriff to read the contents of your blog and decide (in accordance with Google Play rules) which posts or comments should be hidden in Moera for Android.",
@@ -240,6 +242,7 @@
   "enable-all": "Enable all",
   "enable-oppose-reactions": "Enable \"Oppose\" reactions",
   "enable-reactions": "Enable reactions",
+  "enter-blog-name": "Enter blog name",
   "enter-name": "Enter name...",
   "enter-text-here": "Enter text here...",
   "expand": "Expand ↓",
@@ -265,7 +268,7 @@
   "forget-changes": "Do you really want to forget the changes?",
   "forget-unfinished-comment": "Do you really want to forget the unfinished comment?",
   "forgot-home-password": "Forgot Home Password",
-  "forgot-password": "Forgot password",
+  "forgot-password": "Forgot password?",
   "formula": "Formula",
   "friend": "Friend",
   "friend-groups": "Groups of friends",
@@ -451,7 +454,6 @@
   "name-key": "Name Key",
   "name-not-allowed": "Name is not allowed",
   "name-operation-started": "Name operation started",
-  "name-or-node-url": "Blog name or URL",
   "name-or-node-url-not-valid": "Blog name or URL is not valid",
   "need-to-choose": "Need to be chosen",
   "new-avatar-new-posts": "The new avatar will only appear in your new posts and comments",
@@ -626,6 +628,7 @@
   "report-sheriff-sent": "Report to sheriff sent",
   "report-sheriff-title": "Report to sheriff",
   "resend-mail": "Send mail again",
+  "reset": "Reset",
   "reset-password": "Reset Password",
   "reset-password-hint-instructions": "A message was sent to your E-mail address <b>{emailHint}</b> with a secret code needed to reset the password. Please enter it in the field below.",
   "reset-password-instructions": "To reset the password, please enter the name or the URL of your blog.",
