--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -63,6 +63,7 @@
     "itself": "Sam blog"
   },
   "blog-moved": "Wygląda na to, że blog <b>{name}</b> został przeniesiony pod nowy adres <b>{location}</b>. Chcesz otworzyć blog w nowej lokalizacji?",
+  "blog-name": "Nazwa bloga",
   "bold": "Pogrubienie",
   "bottom": "Dół",
   "bulleted-list": "Lista punktowana",
@@ -199,6 +200,7 @@
   "donations-android-prohibited": "Funkcja dotacji jest zabroniona w aplikacjach Android pobranych z Google Play zgodnie z <0>Polityką Płatności Google Play</0>.<1/><2/>Proszę użyć klienta Moera web do tego celu.",
   "dont-ask-again": "Nie pytaj ponownie",
   "dont-ask-next-time": "Nie pytaj następnym razem",
+  "dont-have-account": "Nie masz konta?",
   "dont-recommend": "Nie polecaj",
   "dont-recommend-user": "Nie polecaj już postów <b>{name}</b>?",
   "do-want-allow-android-google-play": "<0>Czy chcesz, aby Twój blog był dostępny dzięki aplikacji Moera na Androida zainstalowanej z Google Play?</0> Aby to zrobić, musisz pozwolić szeryfowi na odczytanie zawartości twojego bloga i decydowanie (zgodnie z zasadami Google Play), które posty lub komentarze powinny być ukryte w Moera dla Androida.",
@@ -240,6 +242,7 @@
   "enable-all": "Włącz wszystko",
   "enable-oppose-reactions": "Włącz reakcje \"Przeciwny\"",
   "enable-reactions": "Włącz reakcje",
+  "enter-blog-name": "Wpisz nazwę bloga",
   "enter-name": "Wpisz imię...",
   "enter-text-here": "Wpisz tekst tutaj...",
   "expand": "Rozwiń ↓",
@@ -265,7 +268,7 @@
   "forget-changes": "Czy na pewno chcesz zapomnieć o zmianach?",
   "forget-unfinished-comment": "Czy na pewno chcesz zapomnieć o niedokończonym komentarzu?",
   "forgot-home-password": "Zapomniałem hasła do domu",
-  "forgot-password": "Zapomniałem hasła",
+  "forgot-password": "Zapomniałem hasła?",
   "formula": "Formuła",
   "friend": "Znajomyj",
   "friend-groups": "Grupy znajomych",
@@ -451,7 +454,6 @@
   "name-key": "Klucz imienny",
   "name-not-allowed": "Nazwa jest niedozwolona",
   "name-operation-started": "Rozpoczęto operację nazwy",
-  "name-or-node-url": "Nazwa bloga lub URL",
   "name-or-node-url-not-valid": "Nazwa bloga lub URL jest nieprawidłowa",
   "need-to-choose": "Należy wybrać",
   "new-avatar-new-posts": "Nowy awatar pojawi się tylko w twoich nowych postach i komentarzach",
@@ -626,6 +628,7 @@
   "report-sheriff-sent": "Skarga została wysłana do szeryfa",
   "report-sheriff-title": "Skarga do szeryfa",
   "resend-mail": "Wyślij maila ponownie",
+  "reset": "Resetuj",
   "reset-password": "Zresetuj hasło",
   "reset-password-hint-instructions": "Wiadomość została wysłana na Twój adres e-mail <b>{emailHint}</b> z kodem potrzebnym do zresetowania hasła. Proszę wprowadź go w polu poniżej.",
   "reset-password-instructions": "Aby zresetować hasło, wprowadź nazwę lub adres URL swojego bloga.",
