--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -63,6 +63,7 @@
     "itself": "Сам блог"
   },
   "blog-moved": "Похоже, что блог <b>{name}</b> переехал на новый адрес <b>{location}</b>. Хотите открыть блог на новом месте?",
+  "blog-name": "Имя блога",
   "bold": "Полужирный",
   "bottom": "В начало",
   "bulleted-list": "Маркированный список",
@@ -199,6 +200,7 @@
   "donations-android-prohibited": "Функция донатов запрещена в приложениях для Android, загруженных из Google Play, в соответствии с <0>Политикой платежей Google Play</0>.<1/><2/> Пожалуйста, используйте веб-клиент Moera для этого.",
   "dont-ask-again": "Больше не спрашивать",
   "dont-ask-next-time": "Не спрашивать следующий раз",
+  "dont-have-account": "Нет аккаунта?",
   "dont-recommend": "Не рекомендовать",
   "dont-recommend-user": "Не рекомендовать больше посты <b>{name}</b>?",
   "do-want-allow-android-google-play": "<0>Вы хотите, чтобы ваш блог был виден в приложении Moera для Android, установленном из Google Play?</0> Для этого вы должны разрешить шерифу читать содержимое вашего блога и решать (в соответствии с правилами Google Play), какие посты или комментарии следует скрыть в Moera для Android.",
@@ -240,6 +242,7 @@
   "enable-all": "Включить все",
   "enable-oppose-reactions": "Разрешить неодобрительные реакции",
   "enable-reactions": "Разрешить реакции",
+  "enter-blog-name": "Введите имя блога",
   "enter-name": "Введите имя...",
   "enter-text-here": "Вводите текст тут...",
   "expand": "Развернуть ↓",
@@ -265,7 +268,7 @@
   "forget-changes": "Вы действительно хотите забыть изменения?",
   "forget-unfinished-comment": "Вы действительно хотите забыть незавершенный комментарий?",
   "forgot-home-password": "Забыл домашний пароль",
-  "forgot-password": "Забыл пароль",
+  "forgot-password": "Забыли пароль?",
   "formula": "Формула",
   "friend": "Друг",
   "friend-groups": "Группы друзей",
@@ -451,7 +454,6 @@
   "name-key": "Именной ключ",
   "name-not-allowed": "Недопустимое имя",
   "name-operation-started": "Операция над именем запущена",
-  "name-or-node-url": "Имя или URL блога",
   "name-or-node-url-not-valid": "Неверное имя или URL блога",
   "need-to-choose": "Нужно выбрать",
   "new-avatar-new-posts": "Новая аватарка появится только в ваших новых постах и комментариях",
@@ -626,6 +628,7 @@
   "report-sheriff-sent": "Жалоба шерифу отправлена",
   "report-sheriff-title": "Жалоба шерифу",
   "resend-mail": "Отправить письмо ещё раз",
+  "reset": "Сбросить",
   "reset-password": "Сброс пароля",
   "reset-password-hint-instructions": "На ваш адрес E-mail <b>{emailHint}</b> было отправлено сообщение с секретным кодом для сброса пароля. Пожалуйста, введите его в поле ниже.",
   "reset-password-instructions": "Чтобы сбросить пароль, пожалуйста, введите имя или URL вашего блога.",
