--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -63,6 +63,7 @@
     "itself": "Сам блог"
   },
   "blog-moved": "Здається, блог <b>{name}</b> переїхав за новою адресою <b>{location}</b>. Бажаєте відкрити блог на новому місці?",
+  "blog-name": "Ім'я блога",
   "bold": "Жирний",
   "bottom": "У початок",
   "bulleted-list": "Маркований список",
@@ -199,6 +200,7 @@
   "donations-android-prohibited": "Функція донатів заборонена в додатках для Android, завантажених з Google Play, відповідно до <0>Політики платежів Google Play</0>.<1/><2/> Будь ласка, використовуйте веб-клієнт Moera для цього.",
   "dont-ask-again": "Більше не питати",
   "dont-ask-next-time": "Не питати наступного разу",
+  "dont-have-account": "Немає акаунту?",
   "dont-recommend": "Не рекомендувати",
   "dont-recommend-user": "Не рекомендувати більше пости <b>{name}</b>?",
   "do-want-allow-android-google-play": "<0>Ви бажаєте, щоб ваш блог було видно у додатку Moera для Android, встановленому із Google Play?</0> Для цього ви повинні дозволити шерифу читати вміст вашого блогу та вирішувати (згідно з правилами Google Play), які пости чи коментарі слід приховати в Moera для Android.",
@@ -240,6 +242,7 @@
   "enable-all": "Увімкнути все",
   "enable-oppose-reactions": "Дозволити несхвальні реакції",
   "enable-reactions": "Дозволити реакції",
+  "enter-blog-name": "Введіть ім'я блога",
   "enter-name": "Введіть ім'я...",
   "enter-text-here": "Введіть текст тут...",
   "expand": "Розгорнути ↓",
@@ -265,7 +268,7 @@
   "forget-changes": "Ви дійсно бажаєте забути зміни?",
   "forget-unfinished-comment": "Ви дійсно бажаєте забути незавершений коментар?",
   "forgot-home-password": "Забув домашній пароль",
-  "forgot-password": "Забув пароль",
+  "forgot-password": "Забули пароль?",
   "formula": "Формула",
   "friend": "Друг",
   "friend-groups": "Групи друзів",
@@ -451,7 +454,6 @@
   "name-key": "Іменний ключ",
   "name-not-allowed": "Неприпустиме ім'я",
   "name-operation-started": "Операцію над ім'ям запущено",
-  "name-or-node-url": "Ім'я чи URL блога",
   "name-or-node-url-not-valid": "Неправильне ім'я або URL блога",
   "need-to-choose": "Треба вибрати",
   "new-avatar-new-posts": "Нова аватарка з'явиться лише у ваших нових постах і коментарях",
@@ -626,6 +628,7 @@
   "report-sheriff-sent": "Скаргу до шерифа надіслано",
   "report-sheriff-title": "Скарга до шерифа",
   "resend-mail": "Відправити листа ще раз",
+  "reset": "Скинути",
   "reset-password": "Скидання пароля",
   "reset-password-hint-instructions": "На вашу адресу E-mail <b>{emailHint}</b> було надіслано повідомлення із секретним кодом для скидання пароля. Будь ласка, введіть його у поле нижче.",
   "reset-password-instructions": "Щоб скинути пароль, будь ласка, введіть ім'я або URL вашого блогу.",
